	  "upgraded" function.
	* Made @delete work with details.
	* Cut down some now-needless stuff in the helpfiles, added
	  help for some undocumented commands.
	* The help system now treats space, minus and underscore as
	  equivalent.  That'll save us some more help entries and
	  generate more useful responses.
	* @stat now uses the new object binding functions.

Release 0.012:
	* More logging and stuff in ObjectD.  And fixed a bug that
	  caused log messages on rebuild.
	* Now the upgraded() function for upgraded objects is called
	  with a call_out, so it executes the new code instead of the
	  old code.  The compiling() function still executes the
	  pre-recompile code.
	* New online help for old Kernel MUDLib commands.  I believe
	  all the Kernel MUDLib legacy commands are now documented.
	* Merged help with @help.  Now the regular help command handles
	  all of it just fine.
	* Slightly different logfile output format.
	* Allow subscription to log and error channels with extra
	  information.  Update "channels" list to show it.
	* LOGD and ERRORD now send out notifications on the log and
	  error channels.
	* Normalized help query strings.  This should let us use fewer
	  search names per help entry, and generate more good matches.
	* Merged object flags into ROOM from SIMPLE_PORTABLE, preparatory
	  to merge of SIMPLE_ROOM and SIMPLE_PORTABLE.
	* Removed unnecessary cmd_social from the SYSTEM_USER object.
	* Fixed bug in path_place...  How long have put and remove not
	  been working?
	* MAPD now lists problem objects when it can't resolve rooms.
	* @set_obj_detail command will now add details to objects.
	* @stat now deals with object details.
	* Existing user commands (but not wizard commands) now take details.

Release 0.011b:
	* Added @make_portable command, very similar to @make_room.
	* Critical fix to setting examine desc for @make_room.
	* @stat now scrolls its output, takes objects in the room or